feat: add 'game-statistic' resource
